--- a/index.html
+++ b/index.html
@@ -196,6 +196,15 @@ info@devstudio.com</a></li>
     <li class="social-footer-list"><a class="social-link-footer" href=""><svg class="social-icon-footer" height="20" width="20"><use href="./images/icons/sprite.svg#icon-facebook3"></use></svg></a></li>
     <li class="social-footer-list"><a class="social-link-footer" href=""><svg class="social-icon-footer" height="20" width="20"><use href="./images/icons/sprite.svg#icon-linkedin4"></use></svg></a></li></ul>
 </div>
+<form action="footer-form">
+    <b class="footer-b">Подпишитесь на рассылку</b>
+    <span class="footer-span">
+        <input type="email" name="user-email" id="" required placeholder="E-mail" class="footer-imput">
+        <button type="submit" class="footer-button">Подписаться
+            <svg width="24" height="24"><use href="./images/icons/sprite.svg#icon-icon-send"></use></svg>
+        </button>
+    </span>
+</form>
 </div>
     </footer>
 
@@ -242,10 +251,11 @@ info@devstudio.com</a></li>
                
             </span>
         </label>
-       <input type="checkbox" name="" id="accept-policy" class="modal-checkbox">
+       <input type="checkbox" name="" id="accept-policy" class="modal-checkbox visual-hiden">
         <label for="accept-policy" class="modal-checkbox-label">Соглашаюсь с рассылкой и принимаю
              <a href="" class="modal-link">Условия договора</a></label>
              <button type="submit" class="modal-btn">Отправить</button>
+
         </form>
         
        </div>
