--- a/porfolio.html
+++ b/porfolio.html
@@ -158,6 +158,7 @@ description">Веб-сайт</p> </div></a></li>
                         платформу для цифрового
                         шпионажа и атак на защищённые сервера конкурентов.</p>
                 </div>
+             
                 <div class="cards-worker">
                 <h3 class="image-title">Дизайн</h3>
                 <p class="
@@ -205,6 +206,17 @@ description">Веб-сайт</p> </div></a></li>
                         </svg></a></li>
             </ul>
         </div>
+        <form action="footer-form">
+            <b class="footer-b">Подпишитесь на рассылку</b>
+            <span class="footer-span">
+                <input type="email" name="user-email" id="" required placeholder="E-mail" class="footer-imput">
+                <button type="submit" class="footer-button">Подписаться
+                    <svg width="24" height="24">
+                        <use href="./images/icons/sprite.svg#icon-icon-send"></use>
+                    </svg>
+                </button>
+            </span>
+        </form>
     </div>
 </footer>
 
