--- a/porfolio.html
+++ b/porfolio.html
@@ -209,7 +209,7 @@ description">Веб-сайт</p> </div></a></li>
         <form action="footer-form">
             <b class="footer-b">Подпишитесь на рассылку</b>
             <span class="footer-span">
-                <input type="email" name="user-email" id="" required placeholder="E-mail" class="footer-imput">
+                <input type="email" name="user-email"  required placeholder="E-mail" class="footer-imput">
                 <button type="submit" class="footer-button">Подписаться
                     <svg width="24" height="24">
                         <use href="./images/icons/sprite.svg#icon-icon-send"></use>
